@@ -3,6 +3,7 @@ package uk.ac.cam.groupprojects.bravo.imageProcessing;
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
+import java.io.InputStream;
 
 /**
  * Uses the Pi camera to to take images and load into java
@@ -18,17 +19,14 @@ public class PiCamera {
      */
     public static BufferedImage takeImage() throws CameraException {
 
-        // Build Command
-        String command = "raspistill -o -";
-
-        //TODO: check for errors in running command to give better error message
-
         // Run command and get output
         try {
-            ProcessBuilder pb = new ProcessBuilder(command);
-            Process p = pb.start();
-            BufferedImage image = ImageIO.read(p.getInputStream());
-            p.getInputStream().close();
+            String command = "raspistill -o -";
+            Process child = Runtime.getRuntime().exec(command);
+
+            InputStream in = child.getInputStream();
+            BufferedImage image = ImageIO.read(in);
+            in.close();
 
             return image;
         } catch (IOException e) {
